# shmq

./: LICENSE  README.rst  pyproject.toml
src/shmq/: circular_buffer.py  exceptions.py
tests/: test_circular_buffer.py
