[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shmq"
dynamic = ["version"]
readme = "README.rst"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "bandit",
    "safety",
]